изменение блока trending now

--- a/product.html
+++ b/product.html
@@ -406,7 +406,7 @@
     <acide class="breadcrumbs center">
         <h2 class="breadcrumbs__title">New Arrivals</h2>
         <nav class="breadcrumbs__nav">
-            <ul class="breadcrumbs__list">
+            <ul class="list-style-none__flex">
                 <li class="breadcrumbs__item">
                     <a href="#bread" class="menu__link breadcrumbs__link">Home</a>
                 </li>
@@ -480,9 +480,34 @@
             <div class="product__filter">
                 <div class="product-trending">
                     <h3 class="product_title">Trending now</h3>
-                    <div class="product_type">
-                        <p>Bohemian | Floral | Lace</p>
-                        <p>Floral | Lace | Bohemian</p>
+                    <div class="product_type-box">
+                        <div class="product_type">
+                            <ul class="list-style-none__flex">
+                                <li class="product_type-item">
+                                    <a class="menu__link product_type-link" href="#">Bohemian</a>    
+                                </li>
+                                <li class="product_type-item">
+                                    <a class="menu__link product_type-link" href="#" >Floral</a>
+                                </li>
+                                <li class="product_type-item">
+                                    <a class="menu__link product_type-link" href="#" >Lace</a>
+                                </li>
+                            </ul>                    
+                        </div>
+                        <div class="product_type">
+                            <ul class="list-style-none__flex">
+                                <li class="product_type-item">
+                                    <a class="menu__link product_type-link" href="#">Lace</a>    
+                                </li>
+                                <li class="product_type-item">
+                                    <a class="menu__link product_type-link" href="#" >Floral</a>
+                                </li>
+                                <li class="product_type-item">
+                                    <a class="menu__link product_type-link" href="#" >Bohemian</a>
+                                </li>
+                            </ul>                    
+                        </div>
+
                     </div>
                 </div>
                 <div class="product-size">
