страница продукт готова

--- a/product.html
+++ b/product.html
@@ -430,51 +430,60 @@
         <section class="category-product center">
             <div class="category">
                 <details class="category__list">
-                    <summary class="">CATEGORY <i class="fa fa-caret-down" aria-hidden="true"></i></summary>
-                    <div class="">
-                        <div class="">
-                            <a href="#" class="menu__link menu__link_drop">Dresses</a>
-                            <a href="#" class="menu__link menu__link_drop">Tops</a>
-                            <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
-                            <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
-                            <a href="#" class="menu__link menu__link_drop">Blazers</a>
-                            <a href="#" class="menu__link menu__link_drop">Denim</a>
-                            <a href="#" class="menu__link menu__link_drop">Leggings/Pants</a>
-                            <a href="#" class="menu__link menu__link_drop">Skirts/Shorts</a>
-                            <a href="#" class="menu__link menu__link_drop">Accessories</a>
-                        </div>
+                    <summary class="category__summary">CATEGORY<i class="fa fa-caret-down" aria-hidden="true"></i>
+                    </summary>
+                    <div class="category__content">
+                        <a href="#" class="menu__link menu__link_drop">Accessories</a>
+                        <a href="#" class="menu__link menu__link_drop">Bags</a>
+                        <a href="#" class="menu__link menu__link_drop">Denim</a>
+                        <a href="#" class="menu__link menu__link_drop">Hoodies & Sweatshirts</a>
+                        <a href="#" class="menu__link menu__link_drop">Jackets & Coats</a>
+                        <a href="#" class="menu__link menu__link_drop">Pants</a>
+                        <a href="#" class="menu__link menu__link_drop">Polos</a>
+                        <a href="#" class="menu__link menu__link_drop">Shirts</a>
+                        <a href="#" class="menu__link menu__link_drop">Shoes</a>
+                        <a href="#" class="menu__link menu__link_drop">Shorts</a>
+                        <a href="#" class="menu__link menu__link_drop">Sweaters & Knits</a>
+                        <a href="#" class="menu__link menu__link_drop">T-Shirts</a>
+                        <a href="#" class="menu__link menu__link_drop">Tanks</a>
                     </div>
                 </details>
                 <details class="category__list">
-                    <summary class="">BRAND <i class="fa fa-caret-down" aria-hidden="true"></i></summary>
-                    <div class="">
-                        <div class="">
-                            <a href="#" class="menu__link menu__link_drop">Dresses</a>
-                            <a href="#" class="menu__link menu__link_drop">Tops</a>
-                            <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
-                            <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
-                            <a href="#" class="menu__link menu__link_drop">Blazers</a>
-                            <a href="#" class="menu__link menu__link_drop">Denim</a>
-                            <a href="#" class="menu__link menu__link_drop">Leggings/Pants</a>
-                            <a href="#" class="menu__link menu__link_drop">Skirts/Shorts</a>
-                            <a href="#" class="menu__link menu__link_drop">Accessories</a>
-                        </div>
+                    <summary class="category__summary">brand<i class="fa fa-caret-down" aria-hidden="true"></i>
+                    </summary>
+                    <div class="category__content">
+                        <a href="#" class="menu__link menu__link_drop">Accessories</a>
+                        <a href="#" class="menu__link menu__link_drop">Bags</a>
+                        <a href="#" class="menu__link menu__link_drop">Denim</a>
+                        <a href="#" class="menu__link menu__link_drop">Hoodies & Sweatshirts</a>
+                        <a href="#" class="menu__link menu__link_drop">Jackets & Coats</a>
+                        <a href="#" class="menu__link menu__link_drop">Pants</a>
+                        <a href="#" class="menu__link menu__link_drop">Polos</a>
+                        <a href="#" class="menu__link menu__link_drop">Shirts</a>
+                        <a href="#" class="menu__link menu__link_drop">Shoes</a>
+                        <a href="#" class="menu__link menu__link_drop">Shorts</a>
+                        <a href="#" class="menu__link menu__link_drop">Sweaters & Knits</a>
+                        <a href="#" class="menu__link menu__link_drop">T-Shirts</a>
+                        <a href="#" class="menu__link menu__link_drop">Tanks</a>
                     </div>
                 </details>
                 <details class="category__list">
-                    <summary class="">DESIGNER <i class="fa fa-caret-down" aria-hidden="true"></i></summary>
-                    <div class="">
-                        <div class="">
-                            <a href="#" class="menu__link menu__link_drop">Dresses</a>
-                            <a href="#" class="menu__link menu__link_drop">Tops</a>
-                            <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
-                            <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
-                            <a href="#" class="menu__link menu__link_drop">Blazers</a>
-                            <a href="#" class="menu__link menu__link_drop">Denim</a>
-                            <a href="#" class="menu__link menu__link_drop">Leggings/Pants</a>
-                            <a href="#" class="menu__link menu__link_drop">Skirts/Shorts</a>
-                            <a href="#" class="menu__link menu__link_drop">Accessories</a>
-                        </div>
+                    <summary class="category__summary">designer<i class="fa fa-caret-down" aria-hidden="true"></i>
+                    </summary>
+                    <div class="category__content">
+                        <a href="#" class="menu__link menu__link_drop">Accessories</a>
+                        <a href="#" class="menu__link menu__link_drop">Bags</a>
+                        <a href="#" class="menu__link menu__link_drop">Denim</a>
+                        <a href="#" class="menu__link menu__link_drop">Hoodies & Sweatshirts</a>
+                        <a href="#" class="menu__link menu__link_drop">Jackets & Coats</a>
+                        <a href="#" class="menu__link menu__link_drop">Pants</a>
+                        <a href="#" class="menu__link menu__link_drop">Polos</a>
+                        <a href="#" class="menu__link menu__link_drop">Shirts</a>
+                        <a href="#" class="menu__link menu__link_drop">Shoes</a>
+                        <a href="#" class="menu__link menu__link_drop">Shorts</a>
+                        <a href="#" class="menu__link menu__link_drop">Sweaters & Knits</a>
+                        <a href="#" class="menu__link menu__link_drop">T-Shirts</a>
+                        <a href="#" class="menu__link menu__link_drop">Tanks</a>
                     </div>
                 </details>
             </div>
