поправка года страницы cart, изменение типа наведения и ссылки

--- a/cart.html
+++ b/cart.html
@@ -404,14 +404,23 @@
     <!-- // Главное Меню -->
 
     <!-- Блок хлебные крошки -->
-    <acide class="breadcrumbs center">
-        <h2 class="breadcrumbs__title">New Arrivals</h2>
-        <nav class="breadcrumbs__nav">
-            <a href="#bread" class="menu__link breadcrumbs__link">Home /</a>
-            <a href="#bread" class="menu__link breadcrumbs__link">Men /</a>
-            <a href="#bread" class="menu__link breadcrumbs__link"><span class="global_pink">New Arrivals</span></a>
-        </nav>
-    </acide>
+        <acide class="breadcrumbs center">
+            <h2 class="breadcrumbs__title">New Arrivals</h2>
+            <nav class="breadcrumbs__nav">
+                <ul class="list-style-none__flex">
+                    <li class="breadcrumbs__item">
+                        <a href="#bread" class="menu__link breadcrumbs__link">Home</a>
+                    </li>
+                    <li class="breadcrumbs__item">
+                        <a href="#bread" class="menu__link breadcrumbs__link">Men</a>
+                    </li>
+                    <li class="breadcrumbs__item">
+                        <a href="#bread" class="menu__link breadcrumbs__link"><span class="global_pink">New
+                                Arrivals</span></a>
+                    </li>
+                </ul>
+            </nav>
+        </acide>
     <!-- // Блок хлебные крошки -->
 
     <!-- блок состава корзины -->
@@ -427,16 +436,16 @@
         </div>
         <!-- карточка товара 1 -->
         <div class="cart__unit shopping-list">
-            <div class="cart__unit-about">
-                <a href="#">
-                    <img src="./img/products/catalog8.png" alt="фото товара" height="115">
-                </a>
-                <div class="cart__unit-title">
-                    <h3 class="cart__unit-head">Mango  People  T-shirt</h3>
-                    <p class="cart__unit-text">Color:<span class="cart__unit-span">Red</span> </p>
-                    <p class="cart__unit-text">Size:<span class="cart__unit-span">Xll</span> </p>
+            <a class="menu__link" href="item1">
+                <div class="cart__unit-about">
+                    <img src="./img/products/catalog8.png" alt="фото товара">
+                    <div class="cart__unit-title">
+                        <h3 class="cart__unit-head">Mango  People  T-shirt</h3>
+                        <p class="cart__unit-text">Color:<span class="cart__unit-span">Red</span> </p>
+                        <p class="cart__unit-text">Size:<span class="cart__unit-span">Xll</span> </p>
+                    </div>
                 </div>
-            </div>
+            </a>
             <p class="cart__unit-title cart__unit-title_center">$150</p>
             <p class="cart__unit-title cart__unit-title_center cart__quantity">2</p>
             <p class="cart__unit-title cart__unit-title_center">FREE</p>
@@ -445,16 +454,16 @@
         </div>
         <!-- карточка товара 2 -->
         <div class="cart__unit shopping-list">
-            <div class="cart__unit-about">
-                <a href="#">
-                    <img src="./img/products/catalog9.png" alt="фото товара" height="115">
-                </a>
-                <div class="cart__unit-title">
-                    <h3 class="cart__unit-head">Mango  People  T-shirt</h3>
-                    <p class="cart__unit-text">Color:<span class="cart__unit-span">Red</span> </p>
-                    <p class="cart__unit-text">Size:<span class="cart__unit-span">Xll</span> </p>
+            <a class="menu__link" href="item2">
+                <div class="cart__unit-about">
+                    <img src="./img/products/catalog9.png" alt="фото товара" >
+                    <div class="cart__unit-title">
+                        <h3 class="cart__unit-head">Mango  People  T-shirt</h3>
+                        <p class="cart__unit-text">Color:<span class="cart__unit-span">Red</span> </p>
+                        <p class="cart__unit-text">Size:<span class="cart__unit-span">Xll</span> </p>
+                    </div>
                 </div>
-            </div>
+            </a>
             <p class="cart__unit-title cart__unit-title_center">$150</p>
             <p class="cart__unit-title cart__unit-title_center cart__quantity">2</p>
             <p class="cart__unit-title cart__unit-title_center">FREE</p>
@@ -463,16 +472,16 @@
         </div>
         <!-- карточка товара 3 -->
         <div class="cart__unit shopping-list">
-            <div class="cart__unit-about">
-                <a href="#">
-                    <img src="./img/products/catalog12.png" alt="фото товара" height="115">
-                </a>
-                <div class="cart__unit-title">
-                    <h3 class="cart__unit-head">Mango  People  T-shirt</h3>
-                    <p class="cart__unit-text">Color:<span class="cart__unit-span">Red</span> </p>
-                    <p class="cart__unit-text">Size:<span class="cart__unit-span">Xll</span> </p>
+            <a class="menu__link" href="item3">
+                <div class="cart__unit-about">
+                    <img src="./img/products/catalog12.png" alt="фото товара">
+                    <div class="cart__unit-title">
+                        <h3 class="cart__unit-head">Mango  People  T-shirt</h3>
+                        <p class="cart__unit-text">Color:<span class="cart__unit-span">Red</span> </p>
+                        <p class="cart__unit-text">Size:<span class="cart__unit-span">Xll</span> </p>
+                    </div>
                 </div>
-            </div>
+            </a>
             <p class="cart__unit-title cart__unit-title_center">$150</p>
             <p class="cart__unit-title cart__unit-title_center cart__quantity">2</p>
             <p class="cart__unit-title cart__unit-title_center">FREE</p>
