корректировка блока инпут

--- a/cart.html
+++ b/cart.html
@@ -447,7 +447,6 @@
                 </div>
             </a>
             <p class="cart__unit-title cart__unit-title_center">$150</p>
-            <!-- <p class="cart__unit-title cart__unit-title_center cart__quantity">2</p> -->
             <input class="cart__unit-title_center cart__quantity" value="2" type="number" min="1">
             <p class="cart__unit-title cart__unit-title_center">FREE</p>
             <p class="cart__unit-title cart__unit-title_center">$300</p>
@@ -466,7 +465,7 @@
                 </div>
             </a>
             <p class="cart__unit-title cart__unit-title_center">$150</p>
-            <p class="cart__unit-title cart__unit-title_center cart__quantity">2</p>
+            <input class="cart__unit-title_center cart__quantity" value="2" type="number" min="1">
             <p class="cart__unit-title cart__unit-title_center">FREE</p>
             <p class="cart__unit-title cart__unit-title_center">$300</p>
             <i class="fa fa-times-circle drop__item_close cart__unit-title_center" aria-hidden="true"></i>
@@ -484,7 +483,7 @@
                 </div>
             </a>
             <p class="cart__unit-title cart__unit-title_center">$150</p>
-            <p class="cart__unit-title cart__unit-title_center cart__quantity">2</p>
+            <input class="cart__unit-title_center cart__quantity" value="2" type="number" min="1">
             <p class="cart__unit-title cart__unit-title_center">FREE</p>
             <p class="cart__unit-title cart__unit-title_center">$300</p>
             <i class="fa fa-times-circle drop__item_close cart__unit-title_center" aria-hidden="true"></i>
