спан, элементы наведения

--- a/cart.html
+++ b/cart.html
@@ -545,9 +545,9 @@
                     Dhaka, Bd
                 </p>
                 <div class="subscrybe-comment__pag">
-                    <span class="subscrybe-comment__span"></span><span
-                        class="subscrybe-comment__span subscrybe-comment__span_pink"></span><span
-                        class="subscrybe-comment__span"></span>
+                    <span class="subscrybe-comment__span"></span>
+                    <span class="subscrybe-comment__span subscrybe-comment__span_pink"></span>
+                    <span class="subscrybe-comment__span"></span>
                 </div>
             </div>
         </div>
