--- a/checkout.html
+++ b/checkout.html
@@ -415,8 +415,8 @@
     <!-- // Блок хлебные крошки -->
 
     <!-- блок параметров и аккаунта -->
-    <section class="checkout center">
-        <details class="checkout__list" open>
+    <section class="checkout ">
+        <details class="checkout__list center" open>
             <summary class="">01. Shipping Adress<i class="fa fa-caret-down" aria-hidden="true"></i></summary>
             <div class="checkout__conteiner">
                 <!-- блок информации -->
