checkout 2, формирование отступов

--- a/checkout.html
+++ b/checkout.html
@@ -447,21 +447,21 @@
                 </div>
                 <!-- блок Логин -->
                 <div class="checkout__right">
-                    <div class="chekout__block">
-                        <p class="checkout__block-head">Already registed?</p>
-                        <p class="checkout__block-text">Please log in below</p>
+                    <p class="checkout__block-head">Already registed?</p>
+                    <p class="checkout__block-text">Please log in below</p>
+                    <label for="checkout-email">EMAIL ADDRESS <span class="global_pink">*</span></label>
+                    <input type="text" id="checkout-email">
+                    <label for="checkout-email">PASSWORD <span class="global_pink">*</span></label>
+                    <input type="text" id="checkout-email">
+                    <p class="checkout__block-head global_pink">* Required Fileds</p>
+                    <!-- <div class="chekout__block">
                     </div>
                     <div class="chekout__block">
-                        <label for="checkout-email">EMAIL ADDRESS <span class="global_pink">*</span></label>
-                        <input type="text" id="checkout-email">
                     </div>
                     <div class="chekout__block">
-                        <label for="checkout-email">PASSWORD <span class="global_pink">*</span></label>
-                        <input type="text" id="checkout-email">
                     </div>
                     <div class="chekout__block">
-                        <p class="checkout__block-head global_pink">* Required Fileds</p>
-                    </div>
+                    </div> -->
                     <div class="cart__manage">
                         <a class="menu__link cart__link" href="#">Continue</a>
                         <p class="checkout__fogot">Forgot Password ?</p>
