работа с кнопками, решение вопроса по исключению блоков в левом столбце

--- a/checkout.html
+++ b/checkout.html
@@ -441,7 +441,7 @@
                         <p class="checkout__block-text"><i class="fa fa-angle-double-right" aria-hidden="true"></i>Easy
                             access to your order history and status</p>
                     </div>
-                    <div class="cart__manage">
+                    <div class="checkout__manage">
                         <a class="menu__link cart__link" href="#">Continue</a>
                     </div>
                 </div>
@@ -449,20 +449,12 @@
                 <div class="checkout__right">
                     <p class="checkout__block-head">Already registed?</p>
                     <p class="checkout__block-text">Please log in below</p>
-                    <label for="checkout-email">EMAIL ADDRESS <span class="global_pink">*</span></label>
-                    <input type="text" id="checkout-email">
-                    <label for="checkout-email">PASSWORD <span class="global_pink">*</span></label>
-                    <input type="text" id="checkout-email">
-                    <p class="checkout__block-head global_pink">* Required Fileds</p>
-                    <!-- <div class="chekout__block">
-                    </div>
-                    <div class="chekout__block">
-                    </div>
-                    <div class="chekout__block">
-                    </div>
-                    <div class="chekout__block">
-                    </div> -->
-                    <div class="cart__manage">
+                    <label class="checkout__pad" for="checkout-email">EMAIL ADDRESS <span class="global_pink">*</span></label>
+                    <input class="checkout__inputs" type="text" id="checkout-email">
+                    <label class="checkout__pad" for="checkout-email">PASSWORD <span class="global_pink">*</span></label>
+                    <input class="checkout__inputs" type="text" id="checkout-email">
+                    <p class="checkout__block-head global_pink checkout__pad">* Required Fileds</p>
+                    <div class="checkout__manage">
                         <a class="menu__link cart__link" href="#">Continue</a>
                         <p class="checkout__fogot">Forgot Password ?</p>
                     </div>
