--- a/checkout.html
+++ b/checkout.html
@@ -117,7 +117,8 @@
                         <p class="drop__total_price">$500.00</p>
                     </div>
                     <div class="drop__button-account">
-                        <a class="drop__button-account_link drop__button-account_hover" href="./checkout.html">Checkout</a>
+                        <a class="drop__button-account_link drop__button-account_hover"
+                            href="./checkout.html">Checkout</a>
                         <a class="menu__link drop__button-account_link drop__button-account_gray" href="./cart.html">Go
                             to
                             cart</a>
@@ -417,43 +418,45 @@
     <!-- блок параметров и аккаунта -->
     <section class="checkout ">
         <details class="checkout__list center" open>
-            <summary class="">01. Shipping Adress<i class="fa fa-caret-down" aria-hidden="true"></i></summary>
+            <summary class="checkout__summary">01. Shipping Adress<i class="fa fa-caret-down" aria-hidden="true"></i>
+            </summary>
             <div class="checkout__conteiner">
                 <!-- блок информации -->
                 <div class="checkout__left">
-                    <div class="chekout__block">
-                        <p class="checkout__block-head">Check as a guest or register</p>
-                        <p class="checkout__block-text">Register with us for future convenience</p>
-                    </div>
-                    <div class="chekout__block">
-                        <input type="radio" name="checkout" id="checkout-radio">
-                        <label for="checkout-radio">checkout as guest</label>
-                        <input type="radio" name="checkout" id="checkout-radio">
-                        <label for="checkout-radio">register</label>
-                    </div>
-                    <div class="chekout__block">
-                        <p class="checkout__block-head">register and save time!</p>
-                        <p class="checkout__block-text">Register with us for future convenience</p>
-                    </div>
-                    <div class="chekout__block">
-                        <p class="checkout__block-text"><i class="fa fa-angle-double-right" aria-hidden="true"></i>Fast
-                            and easy checkout</p>
-                        <p class="checkout__block-text"><i class="fa fa-angle-double-right" aria-hidden="true"></i>Easy
-                            access to your order history and status</p>
-                    </div>
-                    <div class="checkout__manage">
-                        <a class="menu__link cart__link" href="#">Continue</a>
-                    </div>
+                    <p class="checkout__head">Check as a guest or register</p>
+                    <p class="checkout__text checkout__text_left-bottom">Register with us for future convenience</p>
+                    <form class="checkout__form" action="#">
+                        <div class="checkout__check">
+                            <div class="checkout__block">
+                                <input type="radio" name="checkout" id="checkout-radio">
+                                <label class="checkout__lable" for="checkout-radio">checkout as guest</label><br>
+                            </div>
+                            <div class="checkout__block checkout__text_left-bottom">
+                                <input type="radio" name="checkout" id="checkout-radio">
+                                <label class="checkout__lable" for="checkout-radio">register</label>
+                            </div>
+                        </div>
+                        <p class="checkout__head ">register and save time!</p>
+                        <p class="checkout__text checkout__text_left-bottom">Register with us for future convenience</p>
+                        <a class="menu__link checkout__link" href="#"><i class="fa fa-angle-double-right fa-right-padding" aria-hidden="true"></i>Fast
+                            and easy checkout</a>
+                        <a class="menu__link checkout__link" href="#"><i class="fa fa-angle-double-right fa-right-padding" aria-hidden="true"></i>Easy access to your order history and status</a>
+                        <div class="checkout__manage">
+                            <a class="menu__link cart__link" href="#">Continue</a>
+                        </div>
+                    </form>
                 </div>
                 <!-- блок Логин -->
                 <div class="checkout__right">
-                    <p class="checkout__block-head">Already registed?</p>
-                    <p class="checkout__block-text">Please log in below</p>
-                    <label class="checkout__pad" for="checkout-email">EMAIL ADDRESS <span class="global_pink">*</span></label>
+                    <p class="checkout__head">Already registed?</p>
+                    <p class="checkout__text">Please log in below</p>
+                    <label class="checkout__pad" for="checkout-email">EMAIL ADDRESS <span
+                            class="global_pink">*</span></label>
                     <input class="checkout__inputs" type="text" id="checkout-email">
-                    <label class="checkout__pad" for="checkout-email">PASSWORD <span class="global_pink">*</span></label>
+                    <label class="checkout__pad" for="checkout-email">PASSWORD <span
+                            class="global_pink">*</span></label>
                     <input class="checkout__inputs" type="text" id="checkout-email">
-                    <p class="checkout__block-head global_pink checkout__pad">* Required Fileds</p>
+                    <p class="checkout__head global_pink checkout__pad">* Required Fileds</p>
                     <div class="checkout__manage">
                         <a class="menu__link cart__link" href="#">Continue</a>
                         <p class="checkout__fogot">Forgot Password ?</p>
