добавление страницы товара single корректировка ссылки на index

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <hr>
                         <!-- карточка 2 -->
                         <div class="drop__item_buy">
-                            <a href="#MyAccount2"><img src="./img/card/card2.png" alt="товар в корзине"></a>
+                            <a href="./single.html"><img src="./img/card/card2.png" alt="товар в корзине"></a>
                             <div class="drop__item-data">
                                 <h3 class="drop__item-text">Rebox Zane</h3>
                                 <div class="drop__item-star">
