--- a/single.html
+++ b/single.html
@@ -404,17 +404,9 @@
         <!-- // Главное Меню -->
 
         <!-- блок Банер -->
-        <section class="hero center">
-            <div class="hero-text">
-                <span class="hero-text__span"></span>
-                <!-- <div class="hero-text__block-span">
-                </div> -->
-                <div class="hero-text__block-title">
-                    <h1 class="hero-text__head">THE BRAND</h1>
-                    <h2 class="hero-text__head hero-text_midle">OF LUXERIOUS
-                        <span class="hero-text__head hero-text_midle hero-text_red">FASHION</span>
-                    </h2>
-                </div>
+        <section class="single">
+            <div class="propeties center">
+
             </div>
         </section>
         <!-- // блок Банер -->
