работа над блоком single

--- a/single.html
+++ b/single.html
@@ -405,8 +405,8 @@
 
         <!-- блок Банер -->
         <section class="single">
-            <div class="propeties center">
-
+            <div class="propeties">
+                
             </div>
         </section>
         <!-- // блок Банер -->
