--- a/single.html
+++ b/single.html
@@ -404,9 +404,9 @@
         <!-- // Главное Меню -->
 
         <!-- блок Банер -->
-        <section class="single">
+        <section class="single center">
             <div class="propeties">
-                
+                ffff
             </div>
         </section>
         <!-- // блок Банер -->
