центральное фото блока позиционирование

--- a/single.html
+++ b/single.html
@@ -405,9 +405,14 @@
 
         <!-- блок Банер -->
         <section class="single center">
-            <div class="propeties">
-                ffff
+            <div class="single__left"><i class="fa fa-angle-double-left" aria-hidden="true"></i></div>
+            <div class="single__right"><i class="fa fa-angle-double-right" aria-hidden="true"></i></div>
+            <div class="single__photo">
+                <img src="./img/photo_main.png" alt="">
             </div>
+        </section>
+        <section class="propeties center">
+            ffff
         </section>
         <!-- // блок Банер -->
 
