основная стилизация завершена

--- a/single.html
+++ b/single.html
@@ -415,6 +415,11 @@
     <section class="propeties center">
         <div class="content">
             <p class="propeties__title">WOMEN COLLECTION</p>
+            <div class="propeties__block">
+                <div class="propeties__gray"></div>
+                <div class="propeties__pink"></div>
+                <div class="propeties__gray"></div>
+            </div>
             <h2 class="propeties__head">Moschino Cheap And Chic</h2>
             <p class="propeties__text">
                 Compellingly actualize fully researched processes before proactive outsourcing. Progressively syndicate
@@ -426,28 +431,33 @@
                 <p class="propeties__option">DESIGNER: <span class="propeties__span">BINBURHAN</span></p>
             </div>
             <p class="propeties__price">$561</p>
+            <hr class="propeties__hr">
             <form class="propeties__form" action="#">
-                <div class="propeties__form-item">
-                    <h3 class="propeties__form-head">CHOOSE COLOR</h3>
-                    <select name="COLOR" id="COLOR">
-                        <option value="red">red</option>
-                        <option value="green">green</option>
-                        <option value="blue">blue</option>
-                    </select>
+                <div class="propeties__form-items">
+                    <div class="propeties__form-item">
+                        <h3 class="propeties__form-head">CHOOSE COLOR</h3>
+                        <select name="COLOR" id="COLOR">
+                            <option value="red">red</option>
+                            <option value="green">green</option>
+                            <option value="blue">blue</option>
+                        </select>
+                    </div>
+                    <div class="propeties__form-item">
+                        <h3 class="propeties__form-head">CHOOSE SIZE</h3>
+                        <select name="COLOR" id="COLOR">
+                            <option value="red">XXL</option>
+                            <option value="green">XL</option>
+                            <option value="blue">L</option>
+                        </select>
+                    </div>
+                    <div class="propeties__form-item">
+                        <h3 class="propeties__form-head">QUANTITY</h3>
+                        <input type="number" min="1">
+                    </div>
                 </div>
-                <div class="propeties__form-item">
-                    <h3 class="propeties__form-head">CHOOSE SIZE</h3>
-                    <select name="COLOR" id="COLOR">
-                        <option value="red">XXL</option>
-                        <option value="green">XL</option>
-                        <option value="blue">L</option>
-                    </select>
+                <div class="propeties__button">
+                    <a class="menu__link product__link_button-all" href="#">Add to Cart</a>
                 </div>
-                <div class="propeties__form-item">
-                    <h3 class="propeties__form-head">QUANTITY</h3>
-                    <input type="number" min="1">
-                </div>
-                <a class="menu__link" href="#">Add to Cart</a>
             </form>
         </div>
     </section>
